# mathxlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  load_project_options.cmake
configured_files/: CMakeLists.txt  config.hpp.in
matrixes/: CMakeLists.txt
matrixes/include/: algorithms.h  matrix.h  matrix_algorithms.h  matrix_concepts.h  matrix_minor.h  matrix_operations.h  matrix_view.h  matrixes.h  minor.h  operations.h  static_matrixes.h  view.h
matrixes/include/matrixes/: algorithms.h  matrix.h  matrix_concepts.h  minor.h  operations.h  operations_deduction.h  static_matrixes.h  vector.h  view.h
matrixes/src/: algorithms.cpp  matrixes.cpp
matrixes/unit_tests/: CMakeLists.txt
matrixes/unit_tests/include/: unittest_common.h
matrixes/unit_tests/src/: unittest_matrix.cpp  unittest_matrix_algorithms.cpp  unittest_matrix_operators.cpp  unittest_static_matrix_operations.cpp  unittest_vector.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/: unittest_common.h
unit_tests/src/: unittests_matrix.cpp  unittests_matrix_algorithms.cpp  unittests_matrix_operators.cpp
